add class f-btn, add border color in quote section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="inv-text maintext">Call to action! it's time</div>
                 <div class="h-link">Sign up for our product by clicking that button right over there</div>
             </div>
-            <div class="inv-btn"><button class="h-link">Sign up</button></div>
+            <div class="inv-btn"><button class="h-link f-btn">Sign up</button></div>
         </div>
     </div>
     <!-- footer -->
