--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div>
             <ul class="fbasis">
                 <li class="logo"><a href="#">Creative Shots</a></li>
-                <li class="h-link"><a href="#">Header Link One</a></li>
-                <li class="h-link"><a href="#">Header Link Two</a></li>
-                <li class="h-link"><a href="#">Header Link Three</a></li>
+                <li class="h-link"><a href="#">Photography</a></li>
+                <li class="h-link"><a href="#">Online Image Museum</a></li>
+                <li class="h-link"><a href="#">About us</a></li>
             </ul>
         </div>
         <!-- this is below header -->
