header link name to Images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="fbasis">
                 <li class="logo"><a href="#">Creative Shots</a></li>
                 <li class="h-link"><a href="#">Photography</a></li>
-                <li class="h-link"><a href="#">Online Image Museum</a></li>
+                <li class="h-link"><a href="#">Images</a></li>
                 <li class="h-link"><a href="#">About us</a></li>
             </ul>
         </div>
