Add darkfont class to reduce font color redundancy

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>PhotogArts</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
+    <div class="header dark">
         <div>
             <ul class="fbasis">
                 <li class="logo"><a href="#">Creative Shots</a></li>
@@ -19,7 +19,7 @@
         <!-- this is below header -->
         <div class="sheader"> <!--this is the Flex container-->
             <div class="fbasis">
-                <div class="maintext">This is Gallery website</div>
+                <div class="maintext">This is PhotogArts website</div>
                 <div class="h-link">A website where creative shot is shown to perceived by our eyes to aspire and feel.</div>
                 <div><button class="h-link">Sign up</button></div>
             </div>
@@ -30,7 +30,7 @@
     </div>
     <!--body-->
     <div class="body">
-        <div class="info-header">Artistic shots</div>
+        <div class="info-header darkfont">Artistic shots</div>
         <div class="wrapper">
             <div class="bimg">
                 <img class="imgsize" src="images/alikiso.jpg" alt="pyramid">
@@ -51,7 +51,7 @@
         </div>
         <!-- quotes -->
         <div class="quotes">
-            <div class="quote-text">A thing that you see in my pictures is that I was not afraid to fall in love with these people.</div>
+            <div class="quote-text darkfont">A thing that you see in my pictures is that I was not afraid to fall in love with these people.</div>
             <div class="author">-Annie Leibovitz</div>
         </div>
         <!-- call up to action -->
