Add padding in header container to closer the elements for better looking

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header dark">
+    <div class="header">
         <div>
             <ul class="fbasis">
                 <li class="logo"><a href="#">Creative Shots</a></li>
